[B]1.4.0[/B]
Add possibility to view CDArt instead of ClearArt on video infos.
Many changes in PVR.

[B]1.3.9[/B]
Add number of TV shows on header.
Add possibility to download automatically artworks after library update.
Many fixes.
Changes : bigger cleararts and logos on some views.

[B]1.3.8[/B]
Add new view : Cleararts list.
Add new view : Logos list.
Fix AM/PM on OSD.

[B]1.3.7[/B]
Add new view : Big wide with cleararts.
Fix select dialog.

[B]1.3.6[/B]
Add new view : Logos with Fanarts/Thumbs.
Fix finish time on OSD with 12 hours format.
Fix indicators.
Tweak for 16:9 thumbs/Hide infos to be independant with movies and tvshows.

[B]1.3.5[/B]
Add Unwatched Movies & Unwatched Episodes widgets.
Add new music visualisation background : Pixelated fanart (need script.colorbox addon).
Fix indicators not show by default.

[B]1.3.4[/B]
Add possibility to choose a widget or a picture/multi pictures for each item of Hub (Thanks 
rhodges).

[B]1.3.3[/B]
Changes in Cycle view.

[B]1.3.2[/B]
Fix OK button with confirm dialog.
Add possibility to show all indicators / Hide unwatched indicators only / Hide all indicators in library settings.

[B]1.3.1[/B]
Many fixes.

[B]1.3.0[/B]
Fix on music infos.

[B]1.2.9[/B]
Changes in necessary addons in skin settings.
Change duration format on widgets.

[B]1.2.8[/B]
Add possibility to hide next aired infos on tvshows library.

[B]1.2.7[/B]
Fix views names.
Add stuff at Christmas.

[B]1.2.6[/B]
Fix for music visualisation always stay.

[B]1.2.5[/B]
Add Big Banner view.
Add duration on widgets.
Fix Movies Widget Hub.
Replace unwatched indicator.

[B]1.2.4[/B]
Add Big Fanarts view.

[B]1.2.3[/B]
Add fanarts support for Next Aired addon.
Add season and episode number for next aired widget.

[B]1.2.2[/B]
Add cycle view.

[B]1.2.1[/B]
Add persistent widgets.
Fix basic list.
Fix header not disappear on password popup.

[B]1.2.0[/B]
Add possibility to show indicators of watched, unwatched, in progress and new videos with widget infos.