@@ -429,7 +429,9 @@
 <!-- Ajout Value -->
          <value condition="Control.HasFocus(8913)">$LOCALIZE[31748]</value> 
 <!-- Ajout Value -->
-         <value condition="Control.HasFocus(9022)">$LOCALIZE[31750]</value>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
+         <value condition="Control.HasFocus(9022)">$LOCALIZE[31750]</value>   
+<!-- Ajout Value -->
+         <value condition="Control.HasFocus(8146)">$LOCALIZE[31752]</value>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
     </variable>
 
     <variable name="Label_PlayerStatus">
