@@ -147,6 +147,16 @@
                         <include>Defs_OptionButton</include>
                         <visible>ControlGroup(8000).HasFocus(8001)</visible>
                     </control>
+                    <!-- Hide Submenus Icons -->
+                    <control type="radiobutton" id="8146">
+                        <width>100%</width>
+                        <label>31751</label>
+                        <radioposx>1350</radioposx>
+                        <selected>Skin.HasSetting(home.hidesubmenusicons)</selected>
+                        <onclick>Skin.ToggleSetting(home.hidesubmenusicons)</onclick>
+                        <include>Defs_OptionButton</include>
+                        <visible>ControlGroup(8000).HasFocus(8001)</visible>
+                    </control>
                     <!-- Fallback Widget -->
                     <control type="button" id="8102">
                         <width>100%</width>
@@ -203,7 +213,7 @@
                         <visible>ControlGroup(8000).HasFocus(8001)</visible>
                         <visible>stringcompare(Skin.String(home.widgetposters),$LOCALIZE[31153]) | stringcompare(Skin.String(home.widgetposters),$LOCALIZE[31154]) | stringcompare(Skin.String(home.widgetposters),$LOCALIZE[31166])</visible>
                     </control>
-<!-- Ajout Control -->
+                    <!-- Show Logos on Widgets -->
                     <control type="radiobutton" id="8145">
                         <width>100%</width>
                         <label>31535</label>
