@@ -1,5 +1,6 @@
 [B]1.4.0[/B]
 Add possibility to view CDArt instead of ClearArt on video infos.
+Add possibility to hide submenus icons.
 Many changes in PVR.
 
 [B]1.3.9[/B]
